pagination and product gallery

--- a/index.html
+++ b/index.html
@@ -449,6 +449,27 @@
             </div>
         </div>
 <!-- wholesale products end -->
+        <!-- pagination start -->
+        <div class="container my-5">
+          <div class="row">
+            <div class="col-lg-12 text-center">
+              <nav aria-label="Page navigation example">
+                <ul class="pagination justify-content-center">
+                  <li class="page-item ">
+                    <a class="page-link site-color" href="#">Previous</a>
+                  </li>
+                  <li class="page-item"><a class="page-link text-secondary" href="#">1</a></li>
+                  <li class="page-item"><a class="page-link text-secondary" href="#">2</a></li>
+                  <li class="page-item"><a class="page-link text-secondary" href="#">3</a></li>
+                  <li class="page-item ">
+                    <a class="page-link site-color" href="#">Next</a>
+                  </li>
+                </ul>
+              </nav>
+            </div>
+          </div>
+        </div>
+      <!-- pagination end -->
 
      <!-- footer start -->
      <footer>
