--- a/product-details.html
+++ b/product-details.html
@@ -197,11 +197,14 @@
   <div class="small-img my-5">
     <div class="small-container">
      <div id="small-img-roll">
-       <image src="./img/carusal-pic.jpg" class="show-small-img ms-1" alt="">
-       <image src="./img/carusal-pic2.jpg" class="show-small-img ms-1" alt="">
-       <image src="./img/logo.png" class="show-small-img ms-1" alt="">
-       <image src="./img/product-img.jpg" class="show-small-img ms-1" alt="">
-     </div>
+       <image src="./img/carusal-pic.jpg" class="show-small-img ms-1 mb-3" alt="">
+       <image src="./img/carusal-pic2.jpg" class="show-small-img ms-1 mb-1" alt="">
+        <image src="./img/product-img.jpg" class="show-small-img ms-1 mb-1" alt="">
+       <image src="./img/logo.png" class="show-small-img ms-1 mb-1" alt="">
+        <image src="./img/carusal-pic.jpg" class="show-small-img ms-1 mb-1" alt="">
+        <image src="./img/carusal-pic.jpg" class="show-small-img ms-1 mb-1" alt="">
+          <image src="./img/product-img.jpg" class="show-small-img ms-1 mb-1" alt="">
+          </div>
     </div>
   </div>
   <a href="#" class="btn btn-primary mt-5" style="width: 200px;"> تحميل الصور </a>
